[project]
name = "discord-pin-archiver"
version = "0.0.1"
description = "A simple Discord bot for storing extra pins in a channel."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]
dependencies = [
    "apsw>=3.44.2.0",
    "base2048>=0.1.3",
    "discord.py>=2.3.2",
    "platformdirs>=4.0.0",
    "xxhash>=3.4.1",
]

[project.urls]
Homepage = "https://github.com/Sachaa-Thanasius/discord-pin-archiver"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/discord-pin-archiver/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
    "NPY",
    "PD",
]
extend-ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "ANN101",  # "Self" annotation for self is implicit.
    "ANN102",  # Same, but for cls.
    "ANN204",  # Special method return types are implicit.
    "ANN401",  # Need Any for args and kwargs.
    "PLR0913", # Number of parameters in a function definition doesn't matter.
    "A002",    # Shadowing some built-in names.
    "COM812",  # Recommended by ruff when using ruff format.
    "COM819",  # Recommended by ruff when using ruff format.
    "E501",    # Recommended by ruff when using ruff format.
    "ISC001",  # Recommended by ruff when using ruff format.
    "Q003",    # Recommended by ruff when using ruff format.
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]


[tool.ruff.isort]
combine-as-imports = true

[tool.pyright]
include = ["pin_archiver.py"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "warning"
